# Lab-8a

./: .env.example  .env.template  .gitignore  AI_DEBUGGING_SESSION_COMPLETE.md  AI_INTEGRATION_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DEV_SESSION_QUICK_START.md  EDIT_BUTTON_FIX.md  GRADING.md  IMPROVED_DEV_SERVER_MANAGEMENT.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  Mission Statement.md  PHASE_4_2_SUMMARY.md  PHASE_4_3_COMPLETE.md  PHASE_4_3_SUMMARY.md  PHASE_4_4_ROADMAP.md  PHASE_5_1_COMPLETE.md  PROGRESS.md  PROJECT_COMPLETE_PHASE_4_3.md  README.md  SESSION_CLOSURE_PHASE_5_1.md  SESSION_WRAP_UP_AI_DEBUGGING.md  SESSION_WRAP_UP_TROPE_EXTRACTION.md  UI_UX_AUDIT_REPORT.md  UI_UX_IMPROVEMENTS_COMPLETE.md  VIBECODE_SESSION_MANAGEMENT.md  WINTER_THEME_IMPLEMENTATION.md  ai_routes.py  ai_service.py  app.py  check_server.py  debug_ui.html  dev.py  phase_4_5_endpoints.py  pyproject.toml  quick_test.py  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: genre_tropes_data.csv  works.json
db/: genre_tropes.db
memory/: memory.json
scripts/: add_missing_tropes.py  add_performance_indexes.sql  csv_to_sqlite.py  dev_server.py  import_works_json.py  run_tests.sh
static/: app.js  style.css  style_enhanced.css  style_improved.css  style_original.css
templates/: index.html
tests/: __init__.py  run_tests.py  test_api.py  test_improvements.py
