[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tropes-manager"
version = "1.0.0"
description = "A fast, private, and user-friendly local web application for managing writing tropes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Carlo"}
]
keywords = ["tropes", "writing", "flask", "web-app", "local", "database", "sqlite", "crud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "flake8>=3.8.0",
    "black>=21.0.0"
]

[project.scripts]
tropes-manager = "app:main"

[project.urls]
Homepage = ""
Repository = ""
Documentation = ""
"Bug Tracker" = ""

[tool.setuptools]
packages = ["scripts"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*.css", "static/*.js", "data/*.csv", "db/*.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", "build", "dist"]